Adds project 1 solution

--- a/01 - JavaScript Drum Kit/index-START.html
+++ b/01 - JavaScript Drum Kit/index-START.html
@@ -59,9 +59,35 @@
   <audio data-key="76" src="sounds/tink.wav"></audio>
 
 <script>
+  function addSoundAndTransition()
+  {
+    window.addEventListener('keydown',(e)=>{
+      const audio=document.querySelector(`audio[data-key="${e.keyCode}"]`)
+      if(audio===null){
+        return
+      }
+      const key=document.querySelector(`div[data-key='${e.keyCode}']`)
+      key.classList.add('playing')
+      audio.currentTime=0;
+      audio.play()
+    })
+  }
+
+  function removeTransition(){ 
+    const keys=document.querySelectorAll('.key')
+    keys.forEach((key)=>{
+      addEventListener('transitionend',(e)=>{
+        //if e.propertyName!==transform return    :THIS CAN BE DONE TO {SAVE} TIME AS WE ARE WAITING FOR THE TRANSITION TO END
+        e.target.classList.remove('playing') //OR this.classList.remove('playing')
+      })
+    })
+  }
+
+  addSoundAndTransition()
+  removeTransition()
+
 
 </script>
-
 
 </body>
 </html>
