--- a/02 - JS and CSS Clock/index-START.html
+++ b/02 - JS and CSS Clock/index-START.html
@@ -63,13 +63,44 @@
       background: black;
       position: absolute;
       top: 50%;
+      transform-origin:100%;
+      transform:rotate(90deg)
     }
-
+    .second-hand{
+      height:5px;
+    }
+    .min-hand{
+      height:8px;
+    }
+    .hour-hand{
+      height:12px;;
+    }
   </style>
 
   <script>
+    const secHand=document.querySelector('.second-hand')
+    const minHand=document.querySelector('.min-hand')
+    const hourHand=document.querySelector('.hour-hand')
+    const time=()=>{
+      const date= new Date()
 
+      const sec=date.getSeconds()
+      const secDeg=sec/60*360+90
+      secHand.style.transform=`rotate(${secDeg}deg)`
+      secHand.style.transition='all infinite '
 
+      const min=date.getMinutes()
+      const minDeg=min/60*360+90
+      minHand.style.transform= `rotate(${minDeg}deg)`
+      minHand.style.transition='all infinite'
+
+      const hour=date.getHours()
+      const hourDeg=hour/12*360+90
+      hourHand.style.transform=`rotate(${hourDeg}deg)`
+      hourHand.style.transition='all infinite'
+
+    }
+    setInterval(time,1000)
   </script>
 </body>
 </html>
