--- a/03 - CSS Variables/index-START.html
+++ b/03 - CSS Variables/index-START.html
@@ -16,7 +16,7 @@
     <input id="blur" type="range" name="blur" min="0" max="25" value="10" data-sizing="px">
 
     <label for="base">Base Color</label>
-    <input id="base" type="color" name="base" value="#ffc600">
+    <input id="base" type="color" name="base" value="#00FF1E">
   </div>
 
   <img src="https://source.unsplash.com/7bwQXzbF6KE/800x500">
@@ -27,6 +27,14 @@
       misc styles, nothing to do with CSS variables
     */
 
+    :root{
+      --blur:10px;
+      --spacing:10px;
+      --base:#00FF1E;
+    }
+    .hl{
+      color: var(--base);
+    }
     body {
       text-align: center;
       background: #193549;
@@ -35,7 +43,11 @@
       font-weight: 100;
       font-size: 50px;
     }
-
+    img{
+      padding: var(--spacing);
+      background: var(--base);
+      filter:blur(var(--blur))
+    }
     .controls {
       margin-bottom: 50px;
     }
@@ -46,6 +58,17 @@
   </style>
 
   <script>
+    const cntls=document.querySelectorAll('.controls input')
+
+    function update(){
+      const sufix=this.dataset.sizing ||''
+      document.documentElement.style.setProperty(`--${this.name}`,this.value+sufix)
+    }
+    cntls.forEach((item)=>{
+      item.addEventListener('change',update)
+      item.addEventListener('mousemove',update)
+    })
+
   </script>
 
 </body>
