Adds project 5 solution

--- a/05 - Flex Panel Gallery/index-START.html
+++ b/05 - Flex Panel Gallery/index-START.html
@@ -27,6 +27,7 @@
     .panels {
       min-height: 100vh;
       overflow: hidden;
+      display: flex;
     }
 
     .panel {
@@ -44,6 +45,11 @@
       font-size: 20px;
       background-size: cover;
       background-position: center;
+      flex: 1;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+     /* align-items: center; */
     }
 
     .panel1 { background-image:url(https://source.unsplash.com/gYl-UtwNg_I/1500x1500); }
@@ -58,20 +64,39 @@
       width: 100%;
       transition: transform 0.5s;
     }
+    .panel :first-child{
+      transform:translateY(-100%);
+    }
+    .panel :last-child{
+      
+      transform: translateY(100%);
+      
+    }
+    .open-active :first-child{
+      transform: translateY(0);
+    }
+    .open-active :last-child{
+      transform:translateY(0);
+    }
 
     .panel p {
       text-transform: uppercase;
       font-family: 'Amatic SC', cursive;
       text-shadow: 0 0 4px rgba(0, 0, 0, 0.72), 0 0 14px rgba(0, 0, 0, 0.45);
       font-size: 2em;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      flex: 1;
     }
 
     .panel p:nth-child(2) {
       font-size: 4em;
     }
 
-    .panel.open {
+    .open {
       font-size: 40px;
+      flex:5;
     }
 
   </style>
@@ -106,7 +131,25 @@
   </div>
 
   <script>
+    const panels=document.querySelectorAll('.panel')
 
+    function toggle(){
+      this.classList.toggle('open')
+      console.log(this)
+    }
+    function texts(e){
+      console.log(e.propertyName)
+      if(e.propertyName.includes('flex')){
+
+        this.classList.toggle('open-active')
+      }
+    }
+
+
+    panels.forEach((panel)=>{
+      panel.addEventListener('click',toggle)
+      panel.addEventListener('transitionend',texts) //BUG: if we doube tap............
+    })
   </script>
 
 
