--- a/07 - Array Cardio Day 2/index-START.html
+++ b/07 - Array Cardio Day 2/index-START.html
@@ -27,16 +27,31 @@
 
     // Some and Every Checks
     // Array.prototype.some() // is at least one person 19 or older?
+    const isAdult=people.some(person=>new Date().getFullYear()-person.year>18)
+    console.log(isAdult)
     // Array.prototype.every() // is everyone 19 or older?
-
+    const areAdults=people.every(person=>new Date().getFullYear()-person.year>18)
+    console.log(areAdults)
     // Array.prototype.find()
     // Find is like filter, but instead returns just the one you are looking for
     // find the comment with the ID of 823423
-
+    const findcom=comments.find((comment)=>comment.id===823423)
+    console.log(findcom)
     // Array.prototype.findIndex()
     // Find the comment with this ID
     // delete the comment with the ID of 823423
+    const index=comments.findIndex((comment)=>{
+      return comment.id===823423
+    })
+    console.log(comments)
+    console.log(index)
+    // comments.splice(index,1)
+    const newComments=[
+      ...comments.slice(0,index),
+      ...comments.slice(index+1)
+    ]
 
+    console.table(newComments)
   </script>
 </body>
 </html>
