Modifies hands' widths in Project2

--- a/02 - JS and CSS Clock/index-START.html
+++ b/02 - JS and CSS Clock/index-START.html
@@ -58,21 +58,25 @@
     }
 
     .hand {
-      width: 50%;
       height: 6px;
       background: black;
       position: absolute;
       top: 50%;
+      right: 50%;
       transform-origin:100%;
-      transform:rotate(90deg)
+      transform:rotate(90deg);
+      border-radius: 15%;
     }
     .second-hand{
+      width: 50%;
       height:5px;
     }
     .min-hand{
+      width: 40%;
       height:8px;
     }
     .hour-hand{
+      width: 35%;
       height:12px;;
     }
   </style>
