--- a/10 - Hold Shift and Check Checkboxes/index-START.html
+++ b/10 - Hold Shift and Check Checkboxes/index-START.html
@@ -97,6 +97,28 @@
   </div>
 
 <script>
+  const checkboxes=document.querySelectorAll('.inbox input[type="checkbox"]')
+let lastChecked;
+function handleCheck(e){
+  // console.log(this)
+  let inBetween=false;
+    if(e.shiftKey && this.checked){
+
+
+      checkboxes.forEach(box=>{
+        console.log(box);
+        if(box===this||box===lastChecked ){
+          inBetween=!inBetween;
+          console.log('niiiinebetweens')
+        }
+        if(inBetween){
+          box.checked=true;
+        }
+      });
+    }
+    lastChecked=this;
+  }
+  checkboxes.forEach(checkbox=>checkbox.addEventListener('click',handleCheck))
 </script>
 </body>
 </html>
