--- a/13 - Slide in on Scroll/index-START.html
+++ b/13 - Slide in on Scroll/index-START.html
@@ -59,6 +59,27 @@
       };
     }
 
+    const sliderImages=document.querySelectorAll('.slide-in')
+
+    function checkSlide(){
+      console.log(window.scrollY)
+      sliderImages.forEach(image=>{
+        const slideInAt=window.scrollY+window.innerHeight - (image.height/2) ;
+        const imageBottom=image.offsetTop + image.height;
+        const isHalfShown = slideInAt >image.offsetTop;
+        const isNotScrolledPast = window.scrollY < imageBottom;
+        if(isHalfShown && isNotScrolledPast){
+          image.classList.add('active')
+        }else{
+          image.classList.remove('active')
+        }
+
+      })
+    }
+
+
+    window.addEventListener('scroll',debounce(checkSlide))
+    
   </script>
 
   <style>
