--- a/15 - LocalStorage/index-START.html
+++ b/15 - LocalStorage/index-START.html
@@ -29,8 +29,42 @@
 <script>
   const addItems = document.querySelector('.add-items');
   const itemsList = document.querySelector('.plates');
-  const items = [];
+  const items = JSON.parse(localStorage.getItem('items'))||[];
 
+  function addItem(e){
+    e.preventDefault();
+    const text= this.querySelector('[name=item]').value
+    const item={
+      text,
+      done:false
+    };
+    items.push(item)
+    populateList(items,itemsList)
+    localStorage.setItem('items',JSON.stringify(items))
+    this.reset()
+  }
+  function populateList (list=[],plate){
+    plate.innerHTML= list.map((key,index)=>{
+      return `
+      <li>
+        <input type="checkbox" id="item${index}" data-index=${index} ${key.done?'checked':''}>
+        <label for="item${index}">${key.text}</label>
+      </li>
+      `
+    }).join("");
+  }
+  function toggleDone(e){
+    if(!e.target.matches('input'))return;
+    const el= e.target;
+    const i=el.dataset.i;
+    items[i].done=!items[i].done;
+    localStorage.setItem('item',JSON.stringify(items))
+    populateList(items,itemsList)
+  }
+  addItems.addEventListener('submit',addItem)
+  itemsList.addEventListener('click',toggleDone)
+  
+populateList(items,itemsList)
 </script>
 
 
