--- a/15 - LocalStorage/index-START.html
+++ b/15 - LocalStorage/index-START.html
@@ -56,7 +56,7 @@
   function toggleDone(e){
     if(!e.target.matches('input'))return;
     const el= e.target;
-    const i=el.dataset.i;
+    const i=el.dataset.index;
     items[i].done=!items[i].done;
     localStorage.setItem('item',JSON.stringify(items))
     populateList(items,itemsList)
